# MDS7202

./: .gitignore  README.md  pyproject.toml
Base/: .pre-commit-config.yaml
Base/.github/workflows/: ci.yml
Clases/: 02_Clase_Herramientas_de_Desarrollo.ipynb  03_Programacion_orientada_a_objetos.ipynb
Laboratorios/: Laboratorio_1.ipynb
Laboratorios/Lab_01/: Laboratorio_1.ipynb
Laboratorios/Lab_02/: Lab2_Enunciado.ipynb
Laboratorios/Lab_03/: Lab3_Enunciado.ipynb  students_grades.json
Laboratorios/Lab_04/: Lab4_Enunciado.ipynb  online_retail_II.pickle
Laboratorios/Lab_05/: Lab5_enunciado.ipynb
Laboratorios/Lab_06/: Lab6_Enunciado.ipynb  Precios Casas RM.csv  documentacion_dataset.md  ingresos_por_comuna_2024.xlsx
Laboratorios/Lab_07/: Lab7_enunciado.ipynb  optuna_lab7.db
Laboratorios/Lab_08/: Lab8_enunciado.ipynb  dockerfile  main.py  optimize.py  requirements.txt
Laboratorios/Lab_08/models/: best_model.pkl
Laboratorios/Lab_09/: Lab9_Enunciado.ipynb
Laboratorios/Lab_10/: Lab10_enunciado.ipynb
