[project]
name = "mds7202"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.6",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
    "scikit-learn>=1.8.0",
]
