[project]
name = "mds7202"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "jupyterlab>=4.5.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "mlflow>=1.27.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "optuna>=4.9.0",
    "pandas>=3.0.1",
    "pillow>=12.2.0",
    "plotly>=6.6.0",
    "pre-commit>=4.5.1",
    "protobuf<4.0.0",
    "ruff>=0.15.8",
    "scikit-learn>=1.8.0",
    "setuptools<82.0.0",
    "shap>=0.52.0",
    "umap-learn>=0.5.12",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors: errores de estilo (indentación, espacios, etc.)
    "W",   # pycodestyle warnings: advertencias de estilo menores
    "F",   # pyflakes: imports no usados, variables indefinidas, nombres duplicados
    "I",   # isort: orden y agrupación correcta de imports
    "B",   # flake8-bugbear: patrones propensos a bugs y malas prácticas
    "UP",  # pyupgrade: modernización automática de sintaxis a Python 3.12+
]
ignore = [
    "E501", # line-too-long: largo de línea (delegado a ruff-format)
]
